plugins {
    id 'java'
    alias libs.plugins.spring.boot apply false
    alias libs.plugins.spring.dependency.management apply false
    alias libs.plugins.spotless apply false
}

group = 'io.github.rehody'
version = '0.0.1-SNAPSHOT'
description = 'ab-platform'

allprojects {
    repositories {
        mavenCentral()
    }
}

def projects = subprojects.findAll { it.path != ':modules' }

configure(projects) {
    apply plugin: 'java'
    apply plugin: 'jacoco'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'io.github.rehody.abplatform.integration-test-convention'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add('-parameters')
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        finalizedBy tasks.named('jacocoTestReport')
    }

    tasks.named('jacocoTestReport') {
        dependsOn tasks.named('test')
        reports {
            xml.required = true
            html.required = true
            csv.required = false
        }
    }

    spotless {
        java {
            target 'src/**/*.java'
            palantirJavaFormat()
            formatAnnotations()
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
        format('misc') {
            target '*.gradle', '*.md', '.gitignore', 'gradle/**/*.toml'
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    dependencies {
        compileOnly libs.lombok
        annotationProcessor libs.lombok
        testCompileOnly libs.lombok
        testAnnotationProcessor libs.lombok
        testRuntimeOnly libs.junit.platform.launcher
    }
}

def modules = findProject(':modules')

if (modules != null) {
    configure(modules) {
        apply plugin: 'base'
    }
}
